--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,20 @@
 {
-	"name": "apollo-express",
-	"version": "0.0.1",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"start": "nodemon ./index.js --exec babel-node -e js",
-		"dev": "babel-watch index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"keywords": [],
-	"author": "Aman Mittal <amandeepmittal@live.com> (www.amanhimself.me)",
-	"license": "MIT",
-	"dependencies": {
-		"apollo-server-express": "^2.1.0",
-		"express": "^4.16.4",
-		"graphql": "^14.0.2"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.7.7",
-		"@babel/preset-env": "^7.7.7",
-		"babel-cli": "^6.26.0",
-		"babel-preset-env": "^1.7.0",
-		"babel-preset-es2015": "^6.24.1",
-		"babel-watch": "^2.0.7"
-	}
+  "name": "upwork",
+  "version": "1.0.0",
+  "description": "Upwork client",
+  "main": "server.js",
+  "dependencies": {
+    "apollo-server-express": "^1.4.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "graphql": "^14.5.8",
+    "graphql-tools": "^4.0.6"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "author": "Abdul Wakeel",
+  "license": "ISC"
 }
